--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>JS Task Board</title>
     </head>
     <body>
+        <div id="app"></div>
         <script src="app.js"></script>
     </body>
 </html>
