--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <div id="app"></div>
+        <form action="" id="new-task-form">
+            <input type="text" id="new-task-input" />
+            <input type="submit" id="new-task-btn" />
+        </form>
         <script src="app.js"></script>
     </body>
 </html>
