centered all ui

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <div id="app"></div>
         <form action="" id="new-task-form">
-            <input type="text" id="new-task-input" />
-            <input type="submit" id="new-task-btn" />
+            <input type="text" id="new-task-input" /> <br />
+            <input type="submit" value="+ task" id="new-task-btn" />
         </form>
         <script src="app.js"></script>
     </body>
