--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>JS Task Board</title>
     </head>
     <body>
+        <!-- <span class="card-span blue"></span>
+        <span class="card-span purple"></span>
+        <span class="card-span green"></span> -->
         <div id="app"></div>
         <form action="" id="new-task-form">
             <input type="text" id="new-task-input" /> <br />
