added sytles to columns and backgrounds

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <span class="card-span purple"></span>
         <span class="card-span green"></span> -->
         <div id="app"></div>
+        <span class="black-hole"></span>
         <form action="" id="new-task-form">
             <input type="text" id="new-task-input" /> <br />
             <input type="submit" value="+ task" id="new-task-btn" />
         </form>
+
         <script src="app.js"></script>
     </body>
 </html>
